--- a/mybonds/templates/beacon/beacon_news.html
+++ b/mybonds/templates/beacon/beacon_news.html
@@ -58,6 +58,7 @@
             {% for beacon in myfllw_list %}
               <div class="well_wxi span12"  style="margin-left:0px;">
                   <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi" style="font-size: 13px;">{{beacon.ttl}}</span>
+                   <span class="badge-wxi"><abbr title="未看文章数">{{beacon.new_cnt}}</abbr></span>
                    <span class="badge-wxi"><abbr title="文章数">{{beacon.cnt}}</abbr></span>
                    <span class="badge-wxi-green"><abbr title="建设者">{{beacon.crt_usr}}</abbr></span>
                   &nbsp;<a class="heartremove" href="/news/beaconnews/?orderby={{orderby}}&heartopt=remove&heartid={{beacon.id}}&heartusr={{beacon.crt_usr}}"  rel="tooltip" title="取消收集" style="float:right;"  ><button class="badge badge-info" type="button">-</button></a>
