add privilige control

--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -50,8 +50,8 @@
             <div class="alert" id="add-error" style="display:block;">
               <a class="close" data-dismiss="alert">×</a>
               <strong>提示</strong> 请输入灯塔名称再保存<br>
-              <span class="badge badge-success">当前灯塔</span><br> 
-              <span class="badge badge-warning">已分享灯塔</span><br> 
+              <!--span class="badge badge-success">当前灯塔</span><br> 
+              <span class="badge badge-warning">已分享灯塔</span><br--> 
             </div>
             <input id="beacon_key"  type="hidden" class="uneditable-input" placeholder="灯塔..." value="{{beaconusr}}:{{beaconid}}"> 
             <input id="beacon_id"  type="hidden" class="uneditable-input" placeholder="灯塔..." value="{{beaconid}}"> 
