add resetpassword func.

--- a/mybonds/templates/login.html
+++ b/mybonds/templates/login.html
@@ -65,6 +65,7 @@
 <div class="reg">
 	<!--a href="/news/" class="register mobi_hide">快速进入</a-->
 	<a href="/apply/" class="register"  style="color:white;font-weight:bold">注册</a>
+	<a href="/apply/lostkey/" class="register"  style="color:white;font-weight:bold">忘记密码</a>
 </div>
 <!--div class="mobi-iphone-app-landing release" id="mobi-iphone-app-landing">
 	<a href="http://itunes.apple.com/cn/app/id432274380">  iPhone 客户端 2.0</a>
