link preview function on page

--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -60,7 +60,7 @@
               <li><a href="/news/beaconlist">灯塔编辑</a></li> 
               <!--li><a href="/news/mybeacons">我的灯塔</a></li> 
               <li><a href="/news/beaconnews">灯塔阅读</a></li--> 
-            </ul><p class="navbar-text pull-right">{{user.username}}</a>&nbsp;&nbsp; <a href="/apply/logout">离开</a></p> 
+            </ul><a href="/usermodify/"><p class="navbar-text pull-right">{{user.username}}</a>&nbsp;&nbsp; <a href="/apply/logout">离开</a></p> 
           </div><!--/.nav-collapse -->
         </div>
       </div>
