--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -57,6 +57,7 @@
             <input id="beacon_id"  type="hidden" class="uneditable-input" placeholder="灯塔..." value="{{beaconid}}"> 
             所属用户<br><input id="beacon_usr"  type="text" class="" placeholder="灯塔所属用户" value="{{beaconusr}}"> 
             <br>灯塔名称<br><input id="beacon_name"  type="text" class="" placeholder="灯塔名称..." value="{{beaconname}}"> 
+            <br>灯塔显示名称<br><input id="beacon_displayname"  type="text" class="" placeholder="灯塔显示名称..." value="{{beacondisplayname}}"> 
             <br>新闻长度<br><input id="beacon_mindoc"  type="text" class="" placeholder="灯塔文章长度" value="{{beaconmindoc}}"> 
             <br>只看热点&nbsp;&nbsp;<input id="headlineonly" class='cbox' type="checkbox" value="{{headlineonly}}" {% if headlineonly == "1" %} checked {% endif %}>
             <br>描述<br><textarea id="beacon_desc" rows="3"  placeholder="灯塔描述..." >{{beacondesc}}</textarea> 
@@ -178,6 +179,7 @@
     beacon_key = $('#beacon_key').val();
     beacon_usr = $('#beacon_usr').val();
     beacon_name = $('#beacon_name').val();
+    beacon_displayname = $('#beacon_displayname').val();
     beacon_desc = $('#beacon_desc').val();
     beacon_mindoc = $('#beacon_mindoc').val();
     headlineonly = "0";
@@ -190,7 +192,7 @@
     }
 
     // alert('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr);
-    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly);
+    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='beacon_displayname);
     // $('#beacon_id').val("");
     // $('#beacon_name').val("");
     // $('#beacon_desc').val(""); 
@@ -200,6 +202,7 @@
     beacon_key = $('#beacon_key').val();
     beacon_id = $('#beacon_id').val();
     beacon_name = $('#beacon_name').val();
+    beacon_displayname = $('#beacon_displayname').val();
     beacon_usr = $('#beacon_usr').val();
     beacon_desc = $('#beacon_desc').val();
     beacon_mindoc = $('#beacon_mindoc').val();
@@ -213,7 +216,7 @@
     }
     
     // alert('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beaconkey='+beacon_key);
-    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beaconkey='+beacon_key+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly);
+    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beaconkey='+beacon_key+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='beacon_displayname);
   });
 
 </script>
