add sysparms process module

--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -57,6 +57,7 @@
               <li><a href="/news/adm/?otype=log">日志</a></li>
               <li><a href="/news/feedbacks">反馈</a></li>
               <li><a href="/news/search">搜索</a></li>
+              <li><a href="/sysparms">系统参数修改</a></li>
               <li><a href="/news/beaconlist">灯塔编辑</a></li> 
               <!--li><a href="/news/mybeacons">我的灯塔</a></li> 
               <li><a href="/news/beaconnews">灯塔阅读</a></li--> 
