--- a/mybonds/templates/beacon/beacon_news.html
+++ b/mybonds/templates/beacon/beacon_news.html
@@ -57,7 +57,7 @@
             </div> 
             {% for beacon in myfllw_list %}
               <div class="well_wxi span12"  style="margin-left:0px;">
-                  <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi" style="font-size: 13px;">{{beacon.ttl}}</span>
+                  <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi" style="font-size: 13px;">{{beacon.name}}</span>
                    <span class="badge-wxi"><abbr title="未看文章数">{{beacon.new_cnt}}</abbr></span>
                    <!--span class="badge-wxi"><abbr title="文章数">{{beacon.cnt}}</abbr></span-->
                    <span class="badge-wxi-green"><abbr title="建设者">{{beacon.crt_usr}}</abbr></span>
@@ -135,14 +135,14 @@
             {% if beacon_search %}
               {% for beacon in beacon_search %}
               <div class="well_wxi span12 "  style="margin-left:0px;"> 
-                  <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi"  style="font-size: 13px;">{{beacon.ttl}}</span>
+                  <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi"  style="font-size: 13px;">{{beacon.name}}</span>
                   <p style="font-size: 12px;">{{beacon.desc}}</p>
                    <span class="badge-wxi"><abbr title="未看文章数">{{beacon.new_cnt}}</abbr></span>
                    <!--span class="badge-wxi"><abbr title="文章数">{{beacon.cnt}}</abbr></span-->
                   &nbsp;<a class="heartadd" href="/news/beaconnews/?orderby={{orderby}}&heartopt=add&heartid={{beacon.id}}&heartusr={{beacon.crt_usr}}"  rel="tooltip" title="收集灯塔" style="float: right;"  ><button class="badge badge-info" type="button">+</button></a>
               </div>
               {% endfor %}    
-            {% else %}     
+            {% else %}
               {% for beacon in sharebeacons %}
               <div class="well_wxi span12 "  style="margin-left:0px;"> 
                   <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-wxi"  style="font-size: 13px;">{{beacon.ttl}}</span>
