--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -20,7 +20,7 @@
 
             {% for beacon in beacons %}
               <div class="tag-item span12"  style="margin-left:0px;">
-                <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-info">{{beacon.ttl}}
+                <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-info">{{beacon.name}}
                 <!--span class="badge ">{{beacon.cnt}}</span-->
                 </span>
                 <!--a class='close' data-dismiss='tag-item' style="float: none;">×</a-->
