--- a/mybonds/templates/beacon/queue_list.html
+++ b/mybonds/templates/beacon/queue_list.html
@@ -24,7 +24,7 @@
   			<div class="tab-content">
   				<div class="tab-pane active" id="tab1">
   					<table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>频道新闻已处理队列(最后5条)</caption>
+              <caption>频道新闻已处理队列(显示最后5条)</caption>
               <thead>
                 <tr>
                   <th>time</th>
@@ -42,7 +42,7 @@
                 {% endfor %}
               </tbody>
             </table>  <table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>频道新闻待处理队列 (最后: {{ beaconqueues|length }} 条,共: {{bqcnt}} 条) <a href="/queuelist?delete=beacon" >一键清空</a></caption>
+              <caption>频道新闻待处理队列 (显示最后: {{ beaconqueues|length }} 条,共: {{bqcnt}} 条) <a href="/queuelist?delete=beacon" >一键清空</a></caption>
               <thead>
                 <tr>
                   <th>time</th>
@@ -64,7 +64,7 @@
 
           <div class="tab-pane" id="tab2">
             <table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>移除新闻已处理队列(最后5条)</caption>
+              <caption>移除新闻已处理队列(显示最后5条)</caption>
               <thead>
                 <tr>
                   <th>time</th>
@@ -83,7 +83,7 @@
               </tbody>
             </table>  
             <table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>移除新闻待处理队列 (最后: {{ removeqs|length }} 条,共: {{rqcnt}} 条 ) <a href="/queuelist?delete=removedoc" >一键清空</a></caption>
+              <caption>移除新闻待处理队列 (显示最后: {{ removeqs|length }} 条,共: {{rqcnt}} 条 ) <a href="/queuelist?delete=removedoc" >一键清空</a></caption>
               <thead>
                 <tr>
                   <th>time</th>
@@ -105,7 +105,7 @@
 
           <div class="tab-pane" id="tab3">
             <table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>发送邮件已处理队列(最后5条)</caption>
+              <caption>发送邮件已处理队列(显示最后5条)</caption>
               <thead>
                 <tr>
                   <th>time</th>
@@ -124,7 +124,7 @@
               </tbody>
             </table>  
             <table class="table table-hover table-striped table-bordered table-condensed">
-              <caption>发送邮件待处理 (最后: {{ sendemailqs|length }} 条,共: {{sqcnt}} 条 )<a href="/queuelist?delete=sendemail" >一键清空</a></caption>
+              <caption>发送邮件待处理 (显示最后: {{ sendemailqs|length }} 条,共: {{sqcnt}} 条 )<a href="/queuelist?delete=sendemail" >一键清空</a></caption>
               <thead>
                 <tr>
                   <th>time</th>
